[gd_scene load_steps=5 format=3 uid="uid://cypghvjo1cdmy"]

[ext_resource type="Script" uid="uid://c40degbvkn08x" path="res://Trade.gd" id="1_ge00s"]
[ext_resource type="Texture2D" uid="uid://xh7wwx1airyc" path="res://Art/Stadium.png" id="2_vsvdb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7blhv"]
bg_color = Color(0, 0, 0, 0.360784)

[sub_resource type="Theme" id="Theme_2otoi"]
Label/styles/normal = SubResource("StyleBoxFlat_7blhv")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ge00s")

[node name="Stadium" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.152, 1.15098)
texture = ExtResource("2_vsvdb")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="MyOffer" type="Label" parent="."]
offset_right = 472.0
offset_bottom = 64.0
text = "My Offer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUTeam" type="OptionButton" parent="."]
offset_left = 680.0
offset_right = 1152.0
offset_bottom = 64.0
alignment = 1

[node name="Player1" type="Button" parent="."]
offset_top = 96.0
offset_right = 472.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="Player2" type="Button" parent="."]
offset_top = 184.0
offset_right = 472.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="Player3" type="Button" parent="."]
offset_top = 272.0
offset_right = 472.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="Player4" type="Button" parent="."]
offset_top = 360.0
offset_right = 472.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="Player5" type="Button" parent="."]
offset_top = 448.0
offset_right = 472.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="CPU1" type="Button" parent="."]
offset_left = 680.0
offset_top = 96.0
offset_right = 1152.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="CPU2" type="Button" parent="."]
offset_left = 680.0
offset_top = 184.0
offset_right = 1152.0
offset_bottom = 248.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="CPU3" type="Button" parent="."]
offset_left = 680.0
offset_top = 272.0
offset_right = 1152.0
offset_bottom = 336.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="CPU4" type="Button" parent="."]
offset_left = 680.0
offset_top = 360.0
offset_right = 1152.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="CPU5" type="Button" parent="."]
offset_left = 680.0
offset_top = 448.0
offset_right = 1152.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 16
text_overrun_behavior = 3

[node name="MyValue" type="Label" parent="."]
offset_left = 512.0
offset_top = 176.0
offset_right = 640.0
offset_bottom = 224.0
text = "My Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUValue" type="Label" parent="."]
offset_left = 512.0
offset_top = 384.0
offset_right = 640.0
offset_bottom = 432.0
text = "CPU Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MyValueTotal" type="Label" parent="."]
offset_left = 536.0
offset_top = 224.0
offset_right = 616.0
offset_bottom = 247.0
theme = SubResource("Theme_2otoi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUValueTotal" type="Label" parent="."]
offset_left = 536.0
offset_top = 360.0
offset_right = 616.0
offset_bottom = 383.0
theme = SubResource("Theme_2otoi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MakeTrade" type="Button" parent="."]
offset_left = 512.0
offset_top = 272.0
offset_right = 640.0
offset_bottom = 336.0
text = "Make Trade"

[node name="ClearPlayer1" type="Button" parent="."]
offset_left = 480.0
offset_top = 112.0
offset_right = 498.0
offset_bottom = 143.0
text = "X"

[node name="ClearPlayer2" type="Button" parent="."]
offset_left = 480.0
offset_top = 200.0
offset_right = 498.0
offset_bottom = 231.0
text = "X"

[node name="ClearPlayer3" type="Button" parent="."]
offset_left = 480.0
offset_top = 288.0
offset_right = 498.0
offset_bottom = 319.0
text = "X"

[node name="ClearPlayer4" type="Button" parent="."]
offset_left = 480.0
offset_top = 376.0
offset_right = 498.0
offset_bottom = 407.0
text = "X"

[node name="ClearPlayer5" type="Button" parent="."]
offset_left = 480.0
offset_top = 464.0
offset_right = 498.0
offset_bottom = 495.0
text = "X"

[node name="ClearCPU1" type="Button" parent="."]
offset_left = 656.0
offset_top = 112.0
offset_right = 674.0
offset_bottom = 143.0
text = "X"

[node name="ClearCPU2" type="Button" parent="."]
offset_left = 656.0
offset_top = 200.0
offset_right = 674.0
offset_bottom = 231.0
text = "X"

[node name="ClearCPU3" type="Button" parent="."]
offset_left = 656.0
offset_top = 288.0
offset_right = 674.0
offset_bottom = 319.0
text = "X"

[node name="ClearCPU4" type="Button" parent="."]
offset_left = 656.0
offset_top = 376.0
offset_right = 674.0
offset_bottom = 407.0
text = "X"

[node name="ClearCPU5" type="Button" parent="."]
offset_left = 656.0
offset_top = 464.0
offset_right = 674.0
offset_bottom = 495.0
text = "X"

[node name="Back" type="Button" parent="."]
offset_left = 512.0
offset_top = 544.0
offset_right = 640.0
offset_bottom = 608.0
text = "Back"

[connection signal="pressed" from="Player1" to="." method="_on_player_1_pressed"]
[connection signal="pressed" from="Player2" to="." method="_on_player_2_pressed"]
[connection signal="pressed" from="Player3" to="." method="_on_player_3_pressed"]
[connection signal="pressed" from="Player4" to="." method="_on_player_4_pressed"]
[connection signal="pressed" from="Player5" to="." method="_on_player_5_pressed"]
[connection signal="pressed" from="CPU1" to="." method="_on_cpu_1_pressed"]
[connection signal="pressed" from="CPU2" to="." method="_on_cpu_2_pressed"]
[connection signal="pressed" from="CPU3" to="." method="_on_cpu_3_pressed"]
[connection signal="pressed" from="CPU4" to="." method="_on_cpu_4_pressed"]
[connection signal="pressed" from="CPU5" to="." method="_on_cpu_5_pressed"]
[connection signal="pressed" from="MakeTrade" to="." method="_on_make_trade_pressed"]
[connection signal="pressed" from="ClearPlayer1" to="." method="_on_clear_player_1_pressed"]
[connection signal="pressed" from="ClearPlayer2" to="." method="_on_clear_player_2_pressed"]
[connection signal="pressed" from="ClearPlayer3" to="." method="_on_clear_player_3_pressed"]
[connection signal="pressed" from="ClearPlayer4" to="." method="_on_clear_player_4_pressed"]
[connection signal="pressed" from="ClearPlayer5" to="." method="_on_clear_player_5_pressed"]
[connection signal="pressed" from="ClearCPU1" to="." method="_on_clear_cpu_1_pressed"]
[connection signal="pressed" from="ClearCPU2" to="." method="_on_clear_cpu_2_pressed"]
[connection signal="pressed" from="ClearCPU3" to="." method="_on_clear_cpu_3_pressed"]
[connection signal="pressed" from="ClearCPU4" to="." method="_on_clear_cpu_4_pressed"]
[connection signal="pressed" from="ClearCPU5" to="." method="_on_clear_cpu_5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
